--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
             document.addEventListener("deviceready", onDeviceReady,          false);      
         }
       
-        function onDeviceReady() 
-        {        var element = document.getElementById('appInfo');        
-                 element.innerHTML = 'PhoneGap (version ' +          device.phonegap + ')<br />' 
-                     + device.platform + ' ' 
-                     +          device.name 
-                     + ' (version ' + device.version + ').';      }    </script>
+            function onDeviceReady(){
+            //Get the appInfo DOM element
+            var element = document.getElementById('appInfo');
+            //replace it with specific information about the device
+            //running the application
+            element.innerHTML = 'PhoneGap ( Version '+ device.cordova +').'+ 
+            '<br/> Nombre' + device.name +'.'+ 
+            '<br/> Nombre del modelo' + device.model +'.'+ 
+            '<br/> Plataforma: '+ device.platform + '.'+ 
+            '<br/> Identificador: '+ device.uuid + '.'+ 
+            '<br/> Version: '+ device.version + '.'+ 
+            '<br/> Fabricante: '+ device.manufacturer + '.'+ 
+            '<br/> Emulador: '+ device.isVirtual + '.'+ 
+            '<br/> Numero serial: '+ device.serial + '.';
+
+        }    </script>
   
     </head>  
     <body onload="onBodyLoad()">    
